# reusable-workflows

./: .gitignore  .yamllint.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  go.mod  release-please-config.json
.github/: actionlint.yaml  renovate.json5
.github/workflows/: caller-cleanup-images-fail.yml  caller-docker-build-multi-fail.yml  caller-docker-build-multi-happy.yml  caller-flutter-lint-happy.yml  caller-flutter-release-happy.yml  caller-flutter-test-happy.yml  caller-goreleaser-fail.yml  caller-goreleaser-happy.yml  caller-helm-publish-fail.yml  caller-helm-publish-happy.yml  caller-lint-go-fail.yml  caller-lint-go-happy.yml  caller-lint-helm-fail.yml  caller-lint-helm-happy.yml  caller-lint-python-fail.yml  caller-lint-python-happy.yml  caller-lint-rust-fail.yml  caller-lint-rust-happy.yml  caller-onboard-drift-happy.yml  caller-test-go-cov-fail.yml  caller-test-go-happy.yml  caller-test-python-cov-fail.yml  caller-test-python-happy.yml  caller-test-rust-cov-fail.yml  caller-test-rust-happy.yml  catalog-release.yml  cleanup-images.yml  docker-build-multi.yml  docker-build.yml  drift-check.yml  failure-paths-nightly.yml  goreleaser.yml  helm-publish.yml  integration.yml  kube-lint.yml  kube-validate.yml  lint-flutter.yml  lint-go.yml  lint-helm.yml  lint-python.yml  (+15 more)
actions/compute-prerelease-tag/: action.yml  sanitize.sh
actions/ghcr-login/: action.yml
actions/install-trivy/: action.yml
catalog/: onboard-defaults.json
configs/: kube-linter.yaml
docs/: contracts.md  onboarding-status.md  operations.md
scripts/: apply-repo-defaults.sh  build-sk-workflows-assets.sh  catalog-current-version.sh  install-gomplate.sh  kube-validate.sh  onboard-detect.sh  onboard-drift.sh  onboard-render.sh  onboard-sweep-drift-status.sh  onboard-sweep-stale-pr-check.sh  seed-onboarding-status.sh  setup-sk-workflows.sh
tests/fixtures/lint-test/python-cov-fail/: pyproject.toml
tests/fixtures/lint-test/python-lint-fail/: pyproject.toml
tests/fixtures/lint-test/python-lint-fail/lib/: bad.py
tests/fixtures/lint-test/python-poetry-happy/: pyproject.toml
tests/fixtures/lint-test/python-uv-happy/: pyproject.toml
tests/fixtures/lint-test/python-uv-happy/lib/: add.py
tests/fixtures/lint-test/python-uv-happy/tests/: test_add.py
(+334 files in other folders)
