[tool.poetry]
name = "python-lint-fail"
version = "0.1.0"
description = "Lint-fail fixture (Poetry)"
authors = ["fixture <fixture@example.com>"]
packages = [{ include = "lib" }]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7"
mypy = "^1.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["F", "E"]
