[project]
name = "python-uv-happy"
version = "0.1.0"
description = "Lint-test fixture (uv)"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.7,<0.8",
    "mypy>=1.13,<2",
    "pytest>=8.3",
    "pytest-cov>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lib"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
addopts = "--cov=lib --cov-report=term"
